--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <p>Click here to view more <a href="#">cat photos</a>.</p>
   
     <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-  
+  <div class="class">
+    <button>
+      <div></div>
+    </button>
+  </div>
     <div>
       <p>Things cats love:</p>
       <ul>
