--- a/animation/animcanvas.html
+++ b/animation/animcanvas.html
@@ -15,15 +15,15 @@
         let size = 0;
 
         setInterval(function () {
-            ctx.clearRect(0, 0, 200, 200);
-            ctx.fillRect(0, 0, size, size);
+            ctx.clearRect(0, 0, 200, 200)
+            ctx.fillRect(0, 0, size, size)
             size ++;
             if (size > 200) {
                 size = 0;
             }
-        }, 30);
+        }, 30)
             
         
-    </script>
+    </script
 </body>
 </html>
